unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/CMPL123__AcknowledgementMapping__c.object-meta.xml
<CustomObject>
    <description>Mapping the Users and Public Group fields for Acknowledgement from the MDC Trigger Object</description>
    <label>MDCAcknowledgementMapping</label>
    <nameField>
        <displayFormat>Ack-{00000}</displayFormat>
        <label>AcknowledgementMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDCAcknowledgementMappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>