unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__AckNumber__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__AckNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>AckNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>