unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__Index__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>