unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__IndividualUser__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__IndividualUser__c</fullName>
        <label>IndividualUser</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>