unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__MDC_Trigger_Acknowledgment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__MDC_Trigger_Acknowledgment__c</fullName>
        <label>MDC Trigger Acknowledgment</label>
        <referenceTo>CMPL123__MDC_Trigger__c</referenceTo>
        <relationshipName>MDCAcknowledgmentMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>