unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__PublicGroupAcknowledgment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__PublicGroupAcknowledgment__c</fullName>
        <label>PublicGroupAcknowledgment</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>