unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__SelectObject__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__SelectObject__c</fullName>
        <label>SelectObject</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>