unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/fields/CMPL123__UsersFieldAcknowledgment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__UsersFieldAcknowledgment__c</fullName>
        <label>UsersFieldAcknowledgment</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>