unpackaged/main/default/objects/CMPL123__AcknowledgementMapping__c/validationRules/CMPL123__PublicGroupAcknowledgmentValidation.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123__PublicGroupAcknowledgmentValidation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(CMPL123__AckNumber__c)</errorConditionFormula>
        <errorMessage>Public Grouup Acknowledgement number field cannot be zero</errorMessage>
    </ValidationRule>